--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,6 +41,7 @@ body {
     gap:1px;
     background-color: inherit;
     text-align: center;
+    border-radius: 15px;
     display: flex;
     flex-flow: row;
     flex-wrap: wrap;
